# OCR_ANALYZE

./: Dockerfile  Makefile  README.md  config.py  docker-compose.yml  notes.txt  pyproject.toml  settings.toml  settings.toml.secret
src/api/: api.py
src/modules/: analyze_text.py  perform_ocr.py  type_detector.py
src/my_redis/: redis_config.py
src/validator/: cc_validate.py  email_validate.py  tc_validate.py  url_validate.py
src/validators/: cc_validate.py  domain_validate.py  email_validate.py  tc_validate.py  url_validate.py
static/: style.css
templates/: index.html
